# FlowSplit

./: .mcp.json  IMPLEMENTATION_PLAN.md  STORIES.md
.claude/: mcp.json  settings.local.json
Variants2/: 01-direct-interaction-donut-splitter.html  02-deposit-setup.html  03-split-allocation.html  04-bucket-configuration.html  05-confirmation.html  06-split-complete.html  (+22 more)
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_split_templates.py  003_deposit_detection_fields.py  004_split_action_transfer_id.py
backend/src/app/: main.py
backend/src/app/api/: __init__.py  deps.py
backend/src/app/api/routes/: __init__.py  auth.py  bank_accounts.py  buckets.py  deposits.py  split_plans.py  split_templates.py  users.py  webhooks.py
backend/src/app/core/: __init__.py  config.py  database.py  security.py
backend/src/app/crud/: __init__.py  crud_bank_account.py  crud_bucket.py  crud_deposit.py  crud_split_plan.py  crud_split_template.py  crud_user.py
backend/src/app/models/: __init__.py  bank_account.py  bucket.py  deposit.py  split_plan.py  split_template.py  user.py
backend/src/app/schemas/: __init__.py  bank_account.py  bucket.py  deposit.py  split_plan.py  split_template.py  user.py
backend/src/app/services/: __init__.py  allocation.py  deposit_detection.py  notification.py  plaid.py  split_execution.py  transfer.py
backend/tests/: conftest.py  test_allocation.py  test_api.py  test_services.py
(+107 files in other folders)
